--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="index.css">
+    <!-- <link rel="stylesheet" href="index.css"> -->
 </head>
 <body>
-    <div class="container">
-        <div class="weather-app">
+    <div>
+        <div>
             <h1>Weather App</h1>
-            <div class="search-container">
+            <div>
                 <input type="text" id="city-input" placeholder="Enter city name...">
                 <button id="search-btn">Search</button>
             </div>
