--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="map"></div>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script type="module" src="./src/components/map/map.js"></script>
+<script type="module" src="./src/components/api/map.js"></script>
 <a href="search.html" >
   <button> Search by city</button>
 </a>
